MGU-851 - resolving contrast issues for University Dark theme.

--- a/theme/hillhead40/scss/accessibility.scss
+++ b/theme/hillhead40/scss/accessibility.scss
@@ -336,7 +336,7 @@ body.hillhead40-night div > h1, body.hillhead40-night div > h2, body.hillhead40-
 }
 
 body.hillhead40-night .accessibility-tools .accessibility-group h4 {
-  color: #789bca;
+  color: #95B7E6;;
 }
 
 body.hillhead40-night .card, body.hillhead40-night.path-course-view .course-content>ul>li.section {
